@@ -9,6 +9,8 @@ config.h.in
 config.log
 config.status
 configure
+intltool-extract
+intltool-merge
+intltool-update
 libtool
 stamp-h1
-
