@@ -65,15 +65,18 @@ libgconf_dump_la_SOURCES =   \
 libgconf_dump_module = libgconf-dump.la
 endif
 
+@INTLTOOL_SCHEMAS_RULE@
+
 schemadir = $(GCONF_SCHEMA_FILE_DIR)
-schema_DATA = compiz.schemas
+schema_in_files = compiz.schemas.in
+schema_DATA = $(schema_in_files:.schemas.in=.schemas)
 
 schema_modules = $(patsubst gconf%,,$(subst lib,,$(subst .la,,$(module_LTLIBRARIES))))
 
-compiz.schemas:
+compiz.schemas.in:
 	COMPIZ_SCHEMA_PLUGINS="$(schema_modules)" COMPIZ_SCHEMA_GENERAL=1 \
 	compiz --replace $(schema_modules) gconf-dump &&		  \
-	mv compiz.schemas.dump compiz.schemas
+	mv compiz.schemas.dump compiz.schemas.in
 
 if GCONF_SCHEMAS_INSTALL
 install-data-local:
@@ -118,4 +121,4 @@ module_LTLIBRARIES =		\
 	libwater.la		\
 	$(libgconf_dump_module)
 
-EXTRA_DIST = $(schema_DATA)
+EXTRA_DIST = $(schema_in_files)
